<resources>
    <string name="app_name">King App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New Note</string>
    <string name="note_title">Note Title</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="create_new_note">Create New Note</string>
    <string name="record_audio">Record Audio</string>
    <string name="take_notes">Take Notes</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="save_audio">Save Audio</string>
    <string name="capture_text">Capture Text</string>

</resources>